[guava] remove a lot of ImmutableMaps
Immutable java.util.Map does not seem to keep order of the objects
like guava ImmutableMap